# winmint

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  PSScriptAnalyzerSettings.psd1  README.md  THIRD_PARTY_NOTICES.md  WinMint-CLI.ps1  WinMint-GUI.ps1  WinMint-LegacyUI.ps1  WinMint-UI.ps1  roadmap.md  svgo.config.mjs  winmint.ps1
.cargo/: config.toml
.githooks/: pre-commit
apps/firstlogon-gui/: Cargo.toml  build.rs  winmint-firstlogon-gui.rc
apps/firstlogon-gui/src/: main.rs
apps/gui/: Cargo.toml  README.md  build.rs
apps/gui/src/: actions.rs  assets.rs  bridge.rs  components.rs  intent.rs  main.rs  options.rs  state.rs  theme.rs
apps/gui/src/core/: mod.rs  options.rs  profile.rs
apps/gui/src/screens/: build.rs  configure.rs  mod.rs  review.rs  source.rs
config/: ai-removal.json  appx-removal.json  autounattend.xml  hardware-acceptance.json  packages.json  profiles.json  release-manifest.json  release-readiness.json  surface-drivers.json  tweaks.json
docs/: Architecture-Plan.md  Distribution.md  Hardware-Acceptance.md  Project-Structure.md  Release-Readiness.md  VM-Acceptance.md  WinMint-Feature-Status.html  Windows-Debloat-Strategy.md  Winslopr-Annoyance-Matrix.md  roadmap.md  shell-preview-spec.md  ui_design_language.md  ui_roadmap.md
schemas/: winmint.acceptanceresult.schema.json  winmint.agentevents.schema.json  winmint.agentstate.schema.json  winmint.builddelta.schema.json  winmint.buildmanifest.schema.json  winmint.buildprofile.schema.json  winmint.diagnosticsoverlay.schema.json  winmint.runtimestate.schema.json  winmint.setupshellcontrol.schema.json  winmint.setupshellstatus.schema.json  winmint.uiintent.schema.json  winws.agentstate.schema.json  winws.buildmanifest.schema.json  winws.buildprofile.schema.json
(+728 files in other folders)
