[workspace]
resolver = "2"
members = [
    "apps/gui",
    "crates/winmint-core",
]

# Shared package metadata inherited by every member via `field.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
authors = ["Yanai Klugman"]
publish = false

# Single source of truth for dependency versions across the workspace.
[workspace.dependencies]
winmint-core = { path = "crates/winmint-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gpui = "0.2.2"
gpui-animation = "0.2.4"
embed-resource = "3.0"

# Lints applied to every member that opts in with `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[profile.release]
lto = "thin"
strip = true
