[package]
name = "winmint-firstlogon-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-resource.workspace = true
