[package]
name = "winmint-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
gpui.workspace = true
gpui-animation.workspace = true
serde.workspace = true
serde_json.workspace = true
winmint-core.workspace = true

[build-dependencies]
embed-resource.workspace = true
